--- a/package.json
+++ b/package.json
@@ -57,6 +57,12 @@
           ],
           "description": "Order of Mistral models to attempt"
         },
+        "predicteCommit.provider": {
+          "type": "string",
+          "default": "mistral",
+          "enum": ["mistral", "local"],
+          "description": "AI provider to use. 'local' uses an Ollama-compatible endpoint."
+        },
         "predicteCommit.ignoredFiles": {
           "type": "array",
           "items": {
