--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "node ./node_modules/typescript/bin/tsc --noEmit",
     "lint": "node ./node_modules/eslint/bin/eslint.js src",
+    "format": "prettier --write .",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "npm run compile-tests && npx mocha out/test/unit/**/*.test.js --ui tdd",
     "test:integration": "node ./node_modules/@vscode/test-cli/out/bin.mjs",
@@ -121,6 +122,7 @@
   "lint-staged": {
     "*.ts": [
       "eslint --fix",
+      "prettier --write",
       "bash -c 'npm run test:unit'"
     ]
   },
@@ -132,10 +134,12 @@
     "@vscode/test-electron": "^2.5.2",
     "esbuild": "^0.27.2",
     "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "mocha": "^11.7.5",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.8.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.52.0"
   },
