--- a/package.json
+++ b/package.json
@@ -163,6 +163,10 @@
     ]
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^12.0.2",
+    "@semantic-release/npm": "^13.1.3",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@types/vscode": "^1.108.0",
@@ -176,6 +180,8 @@
     "mocha": "^11.7.5",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.8.0",
+    "semantic-release": "^25.0.2",
+    "semantic-release-vsce": "^6.0.21",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.52.0"
   },
